@@ -2584,15 +2584,34 @@ PPL::Polyhedron::affine_image(const Variable& var,
   if (num_var <= expr_space_dim && expr[num_var] != 0) {
     // The transformation is invertible:
     // minimality and saturators are preserved.
-    if (generators_are_up_to_date())
-      gen_sys.affine_image(num_var, expr, denominator);
+    if (generators_are_up_to_date()) {
+      // GenSys::affine_image() requires the third argument
+      // to be a positive Integer.
+      const LinExpression& sgn_adjusted_expr =
+	denominator > 0 ? expr : -expr;
+      const Integer& abs_denominator =
+	denominator > 0 ? denominator : -1 * denominator;
+      gen_sys.affine_image(num_var, sgn_adjusted_expr, abs_denominator);
+    }
     if (constraints_are_up_to_date()) {
       // To build the inverse transformation,
       // after copying and negating `expr',
       // we exchange the roles of `expr[num_var]' and `denominator'.
-      LinExpression inverse = -expr;
-      inverse[num_var] = denominator;
-      con_sys.affine_preimage(num_var, inverse, expr[num_var]);
+      LinExpression inverse;
+      if (expr[num_var] > 0) {
+	inverse = -expr;
+	inverse[num_var] = denominator;
+	con_sys.affine_preimage(num_var, inverse, expr[num_var]);
+      }
+      else {
+	// The new denominator is negative:
+	// we negate everything once more, as ConSys::affine_preimage()
+	// requires the third argument to be positive.
+	inverse = expr;
+	inverse[num_var] = denominator;
+	negate(inverse[num_var]);
+	con_sys.affine_preimage(num_var, inverse, -expr[num_var]);
+      }
     }
   }
   else {
@@ -2601,7 +2620,13 @@ PPL::Polyhedron::affine_image(const Variable& var,
     if (!generators_are_up_to_date())
       minimize();
     if (!is_empty()) {
-      gen_sys.affine_image(num_var, expr, denominator);
+      // GenSys::affine_image() requires the third argument
+      // to be a positive Integer.
+      const LinExpression& sgn_adjusted_expr =
+	denominator > 0 ? expr : -expr;
+      const Integer& abs_denominator =
+	denominator > 0 ? denominator : -1 * denominator;
+      gen_sys.affine_image(num_var, sgn_adjusted_expr, abs_denominator);
       clear_constraints_up_to_date();
       clear_generators_minimized();
       clear_sat_c_up_to_date();
@@ -2703,15 +2728,34 @@ PPL::Polyhedron::affine_preimage(const Variable& var,
   if (num_var <= expr_space_dim && expr[num_var] != 0) {
     // The transformation is invertible:
     // minimality and saturators are preserved.
-    if (constraints_are_up_to_date())
-      con_sys.affine_preimage(num_var, expr, denominator);
+    if (constraints_are_up_to_date()) {
+      // ConSys::affine_preimage() requires the third argument
+      // to be a positive Integer.
+      const LinExpression& sgn_adjusted_expr =
+	denominator > 0 ? expr : -expr;
+      const Integer& abs_denominator =
+	denominator > 0 ? denominator : -1 * denominator;
+      con_sys.affine_preimage(num_var, sgn_adjusted_expr, abs_denominator);
+    }
     if (generators_are_up_to_date()) {
       // To build the inverse transformation,
       // after copying and negating `expr',
       // we exchange the roles of `expr[num_var]' and `denominator'.
-      LinExpression inverse = -expr;
-      inverse[num_var] = denominator;
-      gen_sys.affine_image(num_var, inverse, expr[num_var]);
+      LinExpression inverse;
+      if (expr[num_var] > 0) {
+	inverse = -expr;
+	inverse[num_var] = denominator;
+	gen_sys.affine_image(num_var, inverse, expr[num_var]);
+      }
+      else {
+	// The new denominator is negative:
+	// we negate everything once more, as GenSys::affine_image()
+	// requires the third argument to be positive.
+	inverse = expr;
+	inverse[num_var] = denominator;
+	negate(inverse[num_var]);
+	gen_sys.affine_image(num_var, inverse, -expr[num_var]);
+      }
     }
   }
   else {
@@ -2719,7 +2763,13 @@ PPL::Polyhedron::affine_preimage(const Variable& var,
     // We need an up-to-date system of constraints.
     if (!constraints_are_up_to_date())
       minimize();
-    con_sys.affine_preimage(num_var, expr, denominator);
+    // ConSys::affine_preimage() requires the third argument
+    // to be a positive Integer.
+    const LinExpression& sgn_adjusted_expr =
+      denominator > 0 ? expr : -expr;
+    const Integer& abs_denominator =
+      denominator > 0 ? denominator : -1 * denominator;
+    con_sys.affine_preimage(num_var, sgn_adjusted_expr, abs_denominator);
     clear_generators_up_to_date();
     clear_constraints_minimized();
     clear_sat_c_up_to_date();
