@@ -21,7 +21,8 @@ USA.
 For the most up-to-date information see the Parma Polyhedra Library
 site: http://www.cs.unipr.it/ppl/ . */
 
-#include "ppl_test.hh"
+#include "ppl_install.hh"
+#include "print.hh"
 
 using namespace std;
 using namespace Parma_Polyhedra_Library;
@@ -32,7 +33,6 @@ using namespace Parma_Polyhedra_Library;
 
 int
 main() {
-  set_handlers();
 
   Variable A(0);
   Variable B(1);
